первый выпуск на railway

--- a/auth.html
+++ b/auth.html
@@ -13,7 +13,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #1a1a1a;
+            background: #ffffff;
             padding: 2rem;
         }
         
@@ -314,6 +314,7 @@
                 <div class="form-group">
                     <label class="checkbox-label" style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
                         <input type="checkbox" id="agreeTerms" required>
+                        <span class="checkmark"></span>
                         <span>Согласен с условиями использования и политикой конфиденциальности</span>
                     </label>
                 </div>
