Update statistics to reflect actual project start (0 users)

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
                 <div class="hero-stats">
                     <div class="stat-item">
-                        <span class="stat-number">2,500+</span>
+                        <span class="stat-number">0</span>
                         <span class="stat-label">Российских клиентов</span>
                     </div>
                     <div class="stat-item">
-                        <span class="stat-number">15 мин</span>
+                        <span class="stat-number">0 мин</span>
                         <span class="stat-label">Средний MVP</span>
                     </div>
                     <div class="stat-item">
@@ -307,15 +307,15 @@
         <div class="container">
             <div class="cta-content">
                 <h2 class="section-title">Готовы начать создавать?</h2>
-                <p class="cta-subtitle">Присоединяйтесь к тысячам разработчиков, которые уже создают с Vibecode AI</p>
-                
+                <p class="cta-subtitle">Присоединяйся и создай свой первый продукт с Vibecode AI</p>
+
                 <div class="cta-stats">
                     <div class="cta-stat">
-                        <span class="stat-number">15,000+</span>
+                        <span class="stat-number">0</span>
                         <span class="stat-text">Созданных проектов</span>
                     </div>
                     <div class="cta-stat">
-                        <span class="stat-number">2,500+</span>
+                        <span class="stat-number">0</span>
                         <span class="stat-text">Довольных пользователей</span>
                     </div>
                     <div class="cta-stat">
