Update: разработчики -> предприниматели

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!-- Социальные доказательства -->
                 <div class="social-proof">
                     <div class="company-logos">
-                        <span>Нам доверяют разработчики по всему миру</span>
+                        <span>Нам доверяют предприниматели со всего мира</span>
                     </div>
                 </div>
 
