--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <h1 class="hero-title">
                     <span class="gradient-text">Vibecode AI</span>
-                    <br>Платформа создания приложений
+                    <br>Сервис создания приложений
                 </h1>
                 <p class="hero-description">
                     Создавайте сайты, приложения и MVP за 5 минут. Без программирования.
