Simplify AI description text

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">🤖</div>
                     <h3>ИИ генерация кода</h3>
-                    <p>Создавайте код на любом языке программирования с помощью передовых ИИ алгоритмов</p>
+                    <p>Создавайте код на любом языке программирования с помощью ИИ</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">💬</div>
