Update feature blocks for non-technical entrepreneurs

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🎨</div>
-                    <h3>Красивый код</h3>
-                    <p>Автоматическое форматирование и соблюдение стандартов</p>
+                    <h3>Готовое приложение</h3>
+                    <p>Получите рабочий продукт сразу после создания</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🔒</div>
-                    <h3>Безопасность</h3>
-                    <p>Ваш код остается конфиденциальным и защищенным</p>
+                    <h3>Конфиденциальность</h3>
+                    <p>Ваши идеи и проекты защищены и остаются только у вас</p>
                 </div>
             </div>
         </div>
