Add close button to demo section

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <!-- Демо секция -->
     <section id="demo" class="demo-section">
         <div class="container">
+            <button class="demo-close-btn" onclick="closeDemoSection()" title="Закрыть демо">&times;</button>
             <h2 class="section-title">Посмотрите, как это работает</h2>
             <p class="demo-subtitle">От идеи до готового приложения за считанные минуты</p>
 
