Update footer description: платформа -> сервис

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>💻 Vibecode</h4>
-                    <p>ИИ платформа для генерации кода с любовью к деталям</p>
+                    <p>ИИ сервис для генерации приложений и сайтов</p>
                 </div>
                 <div class="footer-section">
                     <h4>Продукт</h4>
